objects/Project_Sheet__c/fields/Nicad_Hi_Temp_Cells_X__c.field-meta.xml
<CustomField>
    <fullName>Nicad_Hi_Temp_Cells_X__c</fullName>
    <label>Nicad Hi-Temp Cells X</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Cell</fullName>
            </value>
            <value>
                <fullName>2 Cell</fullName>
            </value>
            <value>
                <fullName>3 Cell</fullName>
            </value>
            <value>
                <fullName>4 Cell</fullName>
            </value>
            <value>
                <fullName>5 Cell</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>