objects/Project_Sheet__c/fields/Nursecall_Call_Point_Reset_Pad__c.field-meta.xml
<CustomField>
    <fullName>Nursecall_Call_Point_Reset_Pad__c</fullName>
    <label>Nursecall Call Point / Reset Pad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>