objects/Project_Sheet__c/fields/Nursecall_Monitoring_Station__c.field-meta.xml
<CustomField>
    <fullName>Nursecall_Monitoring_Station__c</fullName>
    <label>Nursecall Monitoring Station</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>