objects/Project_Sheet__c/fields/Other_Parts__c.field-meta.xml
<CustomField>
    <fullName>Other_Parts__c</fullName>
    <label>Other Parts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>