objects/Project_Sheet__c/fields/Other_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Other_Quantity__c</fullName>
    <label>Other Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>