objects/Project_Sheet__c/fields/Out_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Hours__c</fullName>
    <label>Out of Hours?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>