objects/Project_Sheet__c/fields/Outlet_sign_BS5499__c.field-meta.xml
<CustomField>
    <fullName>Outlet_sign_BS5499__c</fullName>
    <label>Outlet sign BS5499</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>