objects/Project_Sheet__c/fields/Part_2__c.field-meta.xml
<CustomField>
    <fullName>Part_2__c</fullName>
    <label>Part</label>
    <length>255</length>
    <type>Text</type>
</CustomField>