objects/Project_Sheet__c/fields/Parts_Used_and_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Parts_Used_and_Quantity__c</fullName>
    <label>Parts Used and Quantity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>