objects/Project_Sheet__c/fields/PI_Calibration__c.field-meta.xml
<CustomField>
    <fullName>PI_Calibration__c</fullName>
    <label>PI Calibration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>