objects/Project_Sheet__c/fields/PIR_Qty__c.field-meta.xml
<CustomField>
    <fullName>PIR_Qty__c</fullName>
    <label>PIR Qty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Range Up To 100m</fullName>
            </value>
            <value>
                <fullName>Range above 100m</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>