objects/Project_Sheet__c/fields/Plug_Connection_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Plug_Connection_Replacement__c</fullName>
    <label>Plug Connection Replacement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>