objects/Project_Sheet__c/fields/PO_Number_on_Certificate__c.field-meta.xml
<CustomField>
    <fullName>PO_Number_on_Certificate__c</fullName>
    <formula>IF ( Order_No__c &lt;&gt; &quot;&quot;, Order_No__c, Current_Service_PO_No__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Number on Certificate</label>
    <type>Text</type>
</CustomField>