objects/Project_Sheet__c/fields/Printer_Consumables__c.field-meta.xml
<CustomField>
    <fullName>Printer_Consumables__c</fullName>
    <label>Printer Consumables</label>
    <length>20</length>
    <type>Text</type>
</CustomField>