objects/Project_Sheet__c/fields/Proxi_Card_Qty__c.field-meta.xml
<CustomField>
    <fullName>Proxi_Card_Qty__c</fullName>
    <label>Proxi Card Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>