objects/Project_Sheet__c/fields/Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Number__c</fullName>
    <label>DO NOT USE THIS FIELD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>