objects/Project_Sheet__c/fields/QTY_PIR__c.field-meta.xml
<CustomField>
    <fullName>QTY_PIR__c</fullName>
    <label>QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>