objects/Project_Sheet__c/fields/Quantity_10__c.field-meta.xml
<CustomField>
    <fullName>Quantity_10__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>