objects/Project_Sheet__c/fields/Radioactive_Disposal_Qty__c.field-meta.xml
<CustomField>
    <fullName>Radioactive_Disposal_Qty__c</fullName>
    <label>Radioactive Disposal Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>