objects/Project_Sheet__c/fields/Release_Qty__c.field-meta.xml
<CustomField>
    <fullName>Release_Qty__c</fullName>
    <label>Release Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>