objects/Project_Sheet__c/fields/Replacement_Gasket__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Gasket__c</fullName>
    <label>Replacement Gasket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>