objects/Project_Sheet__c/fields/Replacement_Glass__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Glass__c</fullName>
    <label>Replacement Glass</label>
    <length>50</length>
    <type>Text</type>
</CustomField>