objects/Project_Sheet__c/fields/Replacement_Glass_Qty__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Glass_Qty__c</fullName>
    <label>Replacement Glass Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>