objects/Project_Sheet__c/fields/RSSI_Calibration__c.field-meta.xml
<CustomField>
    <fullName>RSSI_Calibration__c</fullName>
    <label>RSSI Calibration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>