objects/Project_Sheet__c/fields/s65_Detector_Calibration__c.field-meta.xml
<CustomField>
    <fullName>s65_Detector_Calibration__c</fullName>
    <label>s65 Detector Calibration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>