objects/Project_Sheet__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Sheets</relationshipLabel>
    <relationshipName>Project_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>