objects/Project_Sheet__c/fields/Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_Address__c</fullName>
    <formula>IF ( FIND(&quot;)&quot;,Site_Name__c,1)&gt;0, MID(Site_Name__c,1,FIND(&quot;)&quot;,Site_Name__c,1))&amp;BR(),Site_Name__c &amp;BR())&amp; 
IF( Site__r.ShippingStreet &lt;&gt; &quot;&quot;, Site__r.ShippingStreet&amp;BR() ,&quot;&quot;)&amp; 
IF( Site__r.ShippingCity &lt;&gt; &quot;&quot;, Site__r.ShippingCity &amp;BR(),&quot;&quot;)&amp; 
IF( Site__r.ShippingState &lt;&gt; &quot;&quot;, Site__r.ShippingState &amp;BR(),&quot;&quot;)&amp; 
IF( Site__r.ShippingCountry&lt;&gt; &quot;&quot;, Site__r.ShippingCountry &amp;BR(),&quot;&quot;)&amp; 
IF( Site__r.ShippingPostalCode&lt;&gt; &quot;&quot;, Site__r.ShippingPostalCode ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Address:</label>
    <type>Text</type>
</CustomField>