objects/Project_Sheet__c/fields/Site_Contract__c.field-meta.xml
<CustomField>
    <fullName>Site_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Contract</label>
    <referenceTo>SiteContracts__c</referenceTo>
    <relationshipLabel>Project Sheets</relationshipLabel>
    <relationshipName>Project_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>