objects/Project_Sheet__c/fields/SLA_Battery__c.field-meta.xml
<CustomField>
    <fullName>SLA_Battery__c</fullName>
    <label>SLA Battery</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>