objects/Project_Sheet__c/fields/SLA_Interconnection__c.field-meta.xml
<CustomField>
    <fullName>SLA_Interconnection__c</fullName>
    <label>SLA Interconnection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>