objects/Project_Sheet__c/fields/SLA_Power_Calibration__c.field-meta.xml
<CustomField>
    <fullName>SLA_Power_Calibration__c</fullName>
    <label>SLA Power Calibration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>