objects/Project_Sheet__c/fields/SLA_Term_Set_Decon__c.field-meta.xml
<CustomField>
    <fullName>SLA_Term_Set_Decon__c</fullName>
    <label>SLA Term Set Decon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>