objects/Project_Sheet__c/fields/SLA_term_set_Decon_Qty__c.field-meta.xml
<CustomField>
    <fullName>SLA_term_set_Decon_Qty__c</fullName>
    <label>SLA term set Decon Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>