objects/Project_Sheet__c/fields/Suppression_Sprinkler_Outlet_Head_qty__c.field-meta.xml
<CustomField>
    <fullName>Suppression_Sprinkler_Outlet_Head_qty__c</fullName>
    <label>Suppression/Sprinkler Outlet Head</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>