objects/Project_Sheet__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>Engineer__c</referenceTo>
    <relationshipLabel>Project Sheets</relationshipLabel>
    <relationshipName>Project_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>