objects/Project_Sheet__c/fields/Technician_Comments_to_Office__c.field-meta.xml
<CustomField>
    <fullName>Technician_Comments_to_Office__c</fullName>
    <description>Technician Comments to Office</description>
    <label>Technician Comments to Office</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>