objects/Project_Sheet__c/fields/Technician_Super_Group__c.field-meta.xml
<CustomField>
    <fullName>Technician_Super_Group__c</fullName>
    <formula>TEXT( Technician__r.Technician_Super_Group__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technician Super Group</label>
    <type>Text</type>
</CustomField>