objects/Project_Sheet__c/fields/Technicians_Revist_Email__c.field-meta.xml
<CustomField>
    <fullName>Technicians_Revist_Email__c</fullName>
    <label>Technicians Revist Email</label>
    <type>Email</type>
</CustomField>