objects/Project_Sheet__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <label>test</label>
    <type>DateTime</type>
</CustomField>