objects/Project_Sheet__c/fields/Test_Keys_Qty__c.field-meta.xml
<CustomField>
    <fullName>Test_Keys_Qty__c</fullName>
    <label>Test Keys Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>