objects/Project_Sheet__c/fields/Valve_Sealing_Units_64mm_Hydrant__c.field-meta.xml
<CustomField>
    <fullName>Valve_Sealing_Units_64mm_Hydrant__c</fullName>
    <label>Valve Sealing Units 64mm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>