objects/Project_Sheet__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visits__c</referenceTo>
    <relationshipLabel>Project Sheets</relationshipLabel>
    <relationshipName>Project_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>