objects/Project_Sheet__c/fields/Visit_Summary__c.field-meta.xml
<CustomField>
    <fullName>Visit_Summary__c</fullName>
    <formula>IF( TEXT( Visit__r.Actual_Service_Date__c )&lt;&gt;&quot;&quot;, &quot;Visit Date: &quot;&amp;TEXT(Visit__r.Actual_Service_Date__c) &amp;BR(),&quot;&quot;) 
&amp;&quot; Visit No: &quot;&amp; Visit__r.Name &amp;BR() 
&amp;&quot; Visit Type: &quot; &amp; TEXT( Visit__r.Visit_Type__c) &amp;BR () 
&amp;&quot; Service Type: &quot; &amp; TEXT(Visit__r.Service_Type__c) &amp;BR() 
&amp;&quot;Visit Complete: &quot;&amp; IF( Visit__r.Visit_Complete__c = true, &quot;Yes&quot;, &quot;No&quot;) &amp;BR() 
&amp;&quot; 2nd Technician: &quot;&amp; Visit__r.X2nd_Technician__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Summary</label>
    <type>Text</type>
</CustomField>