objects/Project_Sheet__c/fields/WSP_Lubrication__c.field-meta.xml
<CustomField>
    <fullName>WSP_Lubrication__c</fullName>
    <label>WSP Lubrication</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>