objects/Project_Sheet__c/fields/X4_6_8FT_Tube__c.field-meta.xml
<CustomField>
    <fullName>X4_6_8FT_Tube__c</fullName>
    <label>4,6,8FT Tube</label>
    <length>50</length>
    <type>Text</type>
</CustomField>