objects/Project_Sheet__c/fields/X4_6_8FT_Tube_Qty__c.field-meta.xml
<CustomField>
    <fullName>X4_6_8FT_Tube_Qty__c</fullName>
    <label>QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>