objects/Project_Sheet__c/fields/X6L_New_Equipment_To_Be_Dispatched__c.field-meta.xml
<CustomField>
    <fullName>X6L_New_Equipment_To_Be_Dispatched__c</fullName>
    <label>New Equipment To Be Dispatched</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>