objects/Project_Sheet__c/fields/X6L_Water_Condemned__c.field-meta.xml
<CustomField>
    <fullName>X6L_Water_Condemned__c</fullName>
    <label>Condemned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>