objects/Project_Sheet__c/fields/X6L_Water_Re_Charged__c.field-meta.xml
<CustomField>
    <fullName>X6L_Water_Re_Charged__c</fullName>
    <label>Re-Charged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>