objects/Project_Sheet__c/validationRules/Depart_must_be_filled_to_submit.validationRule-meta.xml
<ValidationRule>
    <fullName>Depart_must_be_filled_to_submit</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( TEXT(Depart__c) = &quot;&quot;, Fire_Extinguisher_Service_complete__c )</errorConditionFormula>
    <errorDisplayField>Depart__c</errorDisplayField>
    <errorMessage>Please complete the departure before you submit.</errorMessage>
</ValidationRule>