objects/Project_Sheet__c/validationRules/Document_Attached_Field_Ticked.validationRule-meta.xml
<ValidationRule>
    <fullName>Document_Attached_Field_Ticked</fullName>
    <active>true</active>
    <description>If The Parent Fields is Priory Group It has to be Required</description>
    <errorConditionFormula>OR(BEGINS( Site__r.Parent.Name, &apos;Priory Group&apos;), 
BEGINS( Site__r.Parent.Name, &apos;Wilkinson&apos;)) &amp;&amp; 
ISBLANK(Document_Attached__c)</errorConditionFormula>
    <errorDisplayField>Document_Attached__c</errorDisplayField>
    <errorMessage>Please Enter Text in Document Attached TextBox for the &apos;Priory Group&apos; or &apos;Wilkinson&apos; Project Service Sheets</errorMessage>
</ValidationRule>