objects/Project_Sheet__c/validationRules/Submit_This_Service_requires_visit_close.validationRule-meta.xml
<ValidationRule>
    <fullName>Submit_This_Service_requires_visit_close</fullName>
    <active>true</active>
    <errorConditionFormula>and(datevalue(CreatedDate) &gt;=date(2013,10,10), Fire_Extinguisher_Service_complete__c, 
TEXT(Close_Visit__c) = &quot;&quot; )</errorConditionFormula>
    <errorDisplayField>Close_Visit__c</errorDisplayField>
    <errorMessage>Please select whether you wish to have the submitted project sheet close the visit. If it doubt choose &quot;Yes&quot;</errorMessage>
</ValidationRule>