objects/Project_Sheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Site_Name__c</columns>
    <columns>System_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Projects Login</value>
    </filters>
    <label>All</label>
</ListView>